<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SA Photo Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add new photo</string>
    <string name="imageDesc">Image Description</string>
    <string name="choose">Choose Image</string>
    <string name="take">Take Picture</string>
    <string name="caption">Caption :</string>
    <string name="location">Location :</string>
    <string name="upload">Upload</string>
    <string name="image">Image</string>

</resources>
